# ChangeLog for www-apps/mediawiki
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.26 2005/08/24 07:09:31 trapni Exp $

*mediawiki-1.5.0_rc2 (24 Aug 2005)

  24 Aug 2005; Christian Parpart <trapni@gentoo.org>
  -mediawiki-1.5.0_rc1.ebuild, +mediawiki-1.5.0_rc2.ebuild:
  bumping 1.5.0_rc2...

*mediawiki-1.5.0_rc1 (24 Aug 2005)

  24 Aug 2005; Christian Parpart <trapni@gentoo.org>
  +mediawiki-1.5.0_rc1.ebuild:
  bringing 1.5 series into the tree (masked for testing anyway)

  24 Aug 2005; Christian Parpart <trapni@gentoo.org>
  -mediawiki-1.3.11.ebuild, -mediawiki-1.3.12.ebuild,
  -mediawiki-1.4.4.ebuild, -mediawiki-1.4.5.ebuild:
  clean out pretty old versions of mediawiki

*mediawiki-1.4.8 (24 Aug 2005)
*mediawiki-1.3.14 (24 Aug 2005)

  24 Aug 2005; Christian Parpart <trapni@gentoo.org>
  +mediawiki-1.3.14.ebuild, +mediawiki-1.4.8.ebuild:
  version bump; 1.3.14 is security fix only and 1.4.8 is security fix *and*
  minor bugfixes regarding IE7/mono-skin. read the RELEASE-NOTES for more
  infos

*mediawiki-1.4.7 (16 Jul 2005)

  16 Jul 2005; Christian Parpart <trapni@gentoo.org>
  +mediawiki-1.4.7.ebuild:
  version bump

  22 Jun 2005; Jason Wever <weeve@gentoo.org> mediawiki-1.4.5.ebuild:
  Added ~sparc keyword.

*mediawiki-1.4.5 (05 Jun 2005)
*mediawiki-1.3.13 (05 Jun 2005)

  05 Jun 2005; Christian Parpart <trapni@gentoo.org>
  +mediawiki-1.3.13.ebuild, +mediawiki-1.4.5.ebuild:
  Bumping upstream releases 1.3.13 and 1.4.5

  10 May 2005; Christian Parpart <trapni@gentoo.org> mediawiki-1.4.4.ebuild:
  marked stable for amd64 and x86

*mediawiki-1.4.4 (04 May 2005)

  04 May 2005; Christian Parpart <trapni@gentoo.org>
  +mediawiki-1.4.4.ebuild:
  man, yet another release, they're fast, aren't they? (just announced a
  minute ago)

*mediawiki-1.4.3 (04 May 2005)

  04 May 2005; Christian Parpart <trapni@gentoo.org> mediawiki-1.4.0.ebuild,