@@ -1,10 +1,11 @@
-MD5 9fa7a1363701fcd6873475d625a31ce1 ChangeLog 4463
+MD5 9281f71bb4f49cfdaab0595b1f7cedbe ChangeLog 4600
 MD5 1ecb081f1c270870be038f4bf733f298 mediawiki-1.3.13.ebuild 2899
 MD5 4fdadbc34a0bae3bc044cc7e4a6f259c mediawiki-1.4.7.ebuild 2788
 MD5 4ce25f8911fa68ab85e31b0953266511 metadata.xml 226
 MD5 4a5dbf7502c5e1c63b49ca91f378d5d4 mediawiki-1.4.8.ebuild 2788
 MD5 974728a7a5ca221f73700bf7aa2356af mediawiki-1.3.14.ebuild 2899
 MD5 aad0574c17a7b7fe55b6386582073021 mediawiki-1.5.0_rc2.ebuild 2913
+MD5 c5c75d463f4267ce9b1f328e2e2f3fba mediawiki-1.5.0_rc3.ebuild 2913
 MD5 7ec90d807694699cb90d9a56ec2ff67b files/postinstall-1.4-en.txt 1843
 MD5 85f32b5fca9afd6479cdcea022c096f2 files/postinstall-en.txt 1731
 MD5 6bbb8b1b565c4c501fa6551f85956d95 files/digest-mediawiki-1.3.13 69
@@ -12,3 +13,4 @@ MD5 225bfdef8f4fea909375f51a477c8eaf files/digest-mediawiki-1.4.7 68
 MD5 93950f0c5eceff409e784a4da219d25a files/digest-mediawiki-1.4.8 68
 MD5 b290cd8df8d7bb2f6c601b5118ab1b3d files/digest-mediawiki-1.3.14 69
 MD5 3f4fb8ab22b652c550ae715a23f7ec9f files/digest-mediawiki-1.5.0_rc2 69
+MD5 0654dfba1f053b84973463aea5a6b365 files/digest-mediawiki-1.5.0_rc3 69
