@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/mediawiki
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.26 2005/08/24 07:09:31 trapni Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mediawiki/ChangeLog,v 1.27 2005/08/25 22:20:37 trapni Exp $
+
+*mediawiki-1.5.0_rc3 (25 Aug 2005)
+
+  25 Aug 2005; Christian Parpart <trapni@gentoo.org>
+  +mediawiki-1.5.0_rc3.ebuild:
+  versiion bump
 
 *mediawiki-1.5.0_rc2 (24 Aug 2005)
 
